--- a/meta.yaml
+++ b/meta.yaml
@@ -8,10 +8,10 @@ client_id: 793177639245-olst43lspv93vkoql0b9l26hmpf9kfmv.apps.googleusercontent.
 
 
 projects:
-- title: Autotrack
-  type: demo
-  slug: autotrack
-  tech: [autotrack, embed_api]
+#- title: Autotrack
+#  type: demo
+#  slug: autotrack
+#  tech: [autotrack, embed_api]
 - title: Account Explorer
   type: tool
   slug: account-explorer
@@ -21,12 +21,12 @@ projects:
   slug: campaign-url-builder
   status: new
   tech: [url_shortener_api]
-- title: Dimensions & Metrics Explorer
-  type: tool
-  slug: dimensions-metrics-explorer
-  external:
-    action: Launch Tool
-    url: https://developers.google.com/analytics/devguides/reporting/core/dimsmets
+#- title: Dimensions & Metrics Explorer
+#  type: tool
+#  slug: dimensions-metrics-explorer
+#  external:
+#    action: Launch Tool
+#    url: https://developers.google.com/analytics/devguides/reporting/core/dimsmets
   tech: [metadata_api]
 - title: Embed API
   type: demo
@@ -56,24 +56,24 @@ projects:
     slug: server-side-authorization
     tech: [embed_api, api_client_library_python]
     excerpt: 'This demo shows how you can use server-side authorization to display your Google Analytics data to users without granting them access to your Google Analytics account.'
-- title: Enhanced Ecommerce
-  type: demo
-  slug: enhanced-ecommerce
-  tech: [analyticsjs, ecjs]
-  external:
-    action: View Demo
-    url: https://enhancedecommerce.appspot.com
+#- title: Enhanced Ecommerce
+#  type: demo
+#  slug: enhanced-ecommerce
+#  tech: [analyticsjs, ecjs]
+#  external:
+#    action: View Demo
+#    url: https://enhancedecommerce.appspot.com
 - title: Hit Builder
   type: tool
   slug: hit-builder
   tech: [measurement_protocol_validation_server]
-- title: Polymer Elements
-  type: demo
-  slug: polymer-elements
-  tech: [management_api, metadata_api]
-  external:
-    action: View Demo
-    url: https://elements.polymer-project.org/elements/google-analytics?view=demo:demo/index.html
+#- title: Polymer Elements
+#  type: demo
+#  slug: polymer-elements
+#  tech: [management_api, metadata_api]
+#  external:
+#    action: View Demo
+#    url: https://elements.polymer-project.org/elements/google-analytics?view=demo:demo/index.html
 - title: Query Explorer
   type: tool
   slug: query-explorer
@@ -83,20 +83,20 @@ projects:
   status: new
   slug: request-composer
   tech: [analytics_reporting_api_v4, embed_api, management_api, metadata_api]
-- title: Spreadsheet Add-on
-  type: tool
-  slug: spreadsheet-add-on
-  tech: [core_reporting_api, management_api, mcf_reporting_api, metadata_api]
-  external:
-    action: Get Add-on
-    url: https://chrome.google.com/webstore/detail/google-analytics/fefimfimnhjjkomigakinmjileehfopp
-- title: Tag Assistant
-  type: demo
-  slug: tag-assistant
-  tech: [tag_assistant, analyticsjs]
-  external:
-    action: Get Extension
-    url: https://chrome.google.com/webstore/detail/tag-assistant-by-google/kejbdjndbnbjgmefkgdddjlbokphdefk
+#- title: Spreadsheet Add-on
+#  type: tool
+#  slug: spreadsheet-add-on
+#  tech: [core_reporting_api, management_api, mcf_reporting_api, metadata_api]
+#  external:
+#    action: Get Add-on
+#    url: https://chrome.google.com/webstore/detail/google-analytics/fefimfimnhjjkomigakinmjileehfopp
+#- title: Tag Assistant
+#  type: demo
+#  slug: tag-assistant
+#  tech: [tag_assistant, analyticsjs]
+#  external:
+#    action: Get Extension
+#    url: https://chrome.google.com/webstore/detail/tag-assistant-by-google/kejbdjndbnbjgmefkgdddjlbokphdefk
 
 
 # Google Analytics tech tags. Demos and tools should tag themselves with
