--- a/meta.yaml
+++ b/meta.yaml
@@ -55,7 +55,7 @@ projects:
     slug: custom-components
     tech: [embed_api]
     excerpt: 'The built-in components that ship with the Embed API are very nice, but sometimes you need to do more. This example shows how you can extend the Embed API to use your own custom components.'
-  - title: Server-side Authorization
+  - title: Autorización en el Servidor
     slug: server-side-authorization
     tech: [embed_api, api_client_library_python]
     excerpt: 'This demo shows how you can use server-side authorization to display your Google Analytics data to users without granting them access to your Google Analytics account.'
