--- a/meta.yaml
+++ b/meta.yaml
@@ -15,7 +15,7 @@ projects:
 #  type: demo
 #  slug: autotrack
 #  tech: [autotrack, embed_api]
-- title: Account Explorer
+- title: Explorador de Cuenta
   type: tool
   slug: account-explorer
   tech: [embed_api, management_api]
@@ -77,7 +77,7 @@ projects:
 #  external:
 #    action: View Demo
 #    url: https://elements.polymer-project.org/elements/google-analytics?view=demo:demo/index.html
-- title: Query Explorer
+- title: Explorador de Queries
   type: tool
   slug: query-explorer
   tech: [core_reporting_api, embed_api, management_api, metadata_api]
