--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 title: Analytics Dashboard
-host: ga-dev-tools.appspot.com
+host: localhost:8080
 slug: ''
 path: '/'
 #tracking_id: UA-45955569-1
@@ -19,30 +19,19 @@ projects:
   type: tool
   slug: account-explorer
   tech: [embed_api, management_api]
-- title: Campañas
-  type: tool
-  slug: campaign-url-builder
-  status: new
-  tech: [url_shortener_api]
-#- title: Dimensions & Metrics Explorer
-#  type: tool
-#  slug: dimensions-metrics-explorer
-#  external:
-#    action: Launch Tool
-#    url: https://developers.google.com/analytics/devguides/reporting/core/dimsmets
-  tech: [metadata_api]
+
 - title: Opciones
   type: demo
   slug: embed-api
   pages:
-  - title: Comparaciones en el tiempo
-    slug: third-party-visualizations
-    tech: [embed_api, real_time_reporting_api]
-    excerpt: 'The Embed API make it easy to query data and display it in a Google Chart. But it also allows you to access the raw data so you can display it however you want. This example uses the <a href="http://www.chartjs.org/">Chart.js</a> visualization library.'
   - title: Basico
     slug: basic-dashboard
     tech: [embed_api]
     excerpt: 'This demos shows how to create a basic dashboard with a single timeline chart showing site traffic over the past week. You can update the chart to see data for any Google Analytics view you have access to.'
+  - title: Comparaciones en el tiempo
+    slug: third-party-visualizations
+    tech: [embed_api, real_time_reporting_api]
+    excerpt: 'The Embed API make it easy to query data and display it in a Google Chart. But it also allows you to access the raw data so you can display it however you want. This example uses the <a href="http://www.chartjs.org/">Chart.js</a> visualization library.'
   - title: Múltiples Vistas
     slug: multiple-views
     tech: [embed_api]
@@ -66,6 +55,19 @@ projects:
 #  external:
 #    action: View Demo
 #    url: https://enhancedecommerce.appspot.com
+- title: Campañas
+  type: tool
+  slug: campaign-url-builder
+  status: new
+  tech: [url_shortener_api]
+#- title: Dimensions & Metrics Explorer
+#  type: tool
+#  slug: dimensions-metrics-explorer
+#  external:
+#    action: Launch Tool
+#    url: https://developers.google.com/analytics/devguides/reporting/core/dimsmets
+#  tech: [metadata_api]
+
 - title: Explorador de Queries
   type: tool
   slug: query-explorer
