--- a/meta.yaml
+++ b/meta.yaml
@@ -32,10 +32,14 @@ projects:
     slug: third-party-visualizations
     tech: [embed_api, real_time_reporting_api]
     excerpt: 'The Embed API make it easy to query data and display it in a Google Chart. But it also allows you to access the raw data so you can display it however you want. This example uses the <a href="http://www.chartjs.org/">Chart.js</a> visualization library.'
-  - title: Cuadros Interactivos
+  - title: Rutas de los Usuarios
     slug: interactive-charts
     tech: [embed_api]
     excerpt: 'This demo shows how you can build a dashboard that allows you to interactively explore your data. In this example you have a list of filters in one chart that you can click on and then a second chart will render showing just that filtered dataset.'
+  - title: Datos Demográficos
+    slug: demographics
+    tech: [embed_api]
+    excerpt: ''
   - title: Múltiples Vistas
     slug: multiple-views
     tech: [embed_api]
@@ -44,10 +48,10 @@ projects:
     slug: custom-components
     tech: [embed_api]
     excerpt: 'The built-in components that ship with the Embed API are very nice, but sometimes you need to do more. This example shows how you can extend the Embed API to use your own custom components.'
-  - title: Autorización en el Servidor
-    slug: server-side-authorization
-    tech: [embed_api, api_client_library_python]
-    excerpt: 'This demo shows how you can use server-side authorization to display your Google Analytics data to users without granting them access to your Google Analytics account.'
+  #- title: Autorización en el Servidor
+  #  slug: server-side-authorization
+  #  tech: [embed_api, api_client_library_python]
+  #  excerpt: 'This demo shows how you can use server-side authorization to display your Google Analytics data to users without granting them access to your Google Analytics account.'
 #- title: Enhanced Ecommerce
 #  type: demo
 #  slug: enhanced-ecommerce
@@ -72,10 +76,11 @@ projects:
   type: tool
   slug: query-explorer
   tech: [core_reporting_api, embed_api, management_api, metadata_api]
-- title: Hit Builder
-  type: tool
-  slug: hit-builder
-  tech: [measurement_protocol_validation_server]
+#- title: Hit Builder
+#  type: tool
+#  slug: hit-builder
+#  tech: [measurement_protocol_validation_server]
+
 #- title: Polymer Elements
 #  type: demo
 #  slug: polymer-elements
@@ -83,11 +88,13 @@ projects:
 #  external:
 #    action: View Demo
 #    url: https://elements.polymer-project.org/elements/google-analytics?view=demo:demo/index.html
-- title: Request Composer
-  type: tool
-  status: new
-  slug: request-composer
-  tech: [analytics_reporting_api_v4, embed_api, management_api, metadata_api]
+
+#- title: Request Composer
+#  type: tool
+#  status: new
+#  slug: request-composer
+#  tech: [analytics_reporting_api_v4, embed_api, management_api, metadata_api]
+
 #- title: Spreadsheet Add-on
 #  type: tool
 #  slug: spreadsheet-add-on
