Creado cuadro interactivo de doble filtro (País y LandingPathPage) para Ruta de Usuarios. modificado:    templates/embed-api/code/_interactive-charts.js modificado:    templates/embed-api/interactive-charts.html

--- a/meta.yaml
+++ b/meta.yaml
@@ -35,7 +35,7 @@ projects:
   - title: Rutas de los Usuarios
     slug: interactive-charts
     tech: [embed_api]
-    excerpt: 'This demo shows how you can build a dashboard that allows you to interactively explore your data. In this example you have a list of filters in one chart that you can click on and then a second chart will render showing just that filtered dataset.'
+    excerpt: ''
   - title: Datos Demográficos
     slug: demographics
     tech: [embed_api]
