--- a/meta.yaml
+++ b/meta.yaml
@@ -36,6 +36,10 @@ projects:
     slug: demographics
     tech: [embed_api]
     excerpt: ''
+  - title: Resumen de Navegación
+    slug: navigation-summary
+    tech: [embed_api]
+    excerpt: ''
   #- title: Canales y Palabras Claves
   #  slug: channels-keywords
   #  tech: [embed_api]
